<resources>
    <string name="app_name">Authentication</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="default_name">Name</string>
    <string name="register_a_new_user">Register A New User</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
